# icrc-151

./: .gitignore  Cargo.toml  README.md  dfx.json
candid/: icrc151.did
docs/: API.md  CANDID_INTERFACE.md  DEPLOYMENT.md  OPERATIONS.md  STORAGE.md
src/: allowances.rs  lib.rs  operations.rs  queries.rs  state.rs  transaction.rs  types.rs  validation.rs
