[package]
name = "icrc151"
version = "0.1.0"
edition = "2021"
description = "ICRC-151 Multi-Token Ledger Standard implementation for the Internet Computer"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10", features = ["value"] }
ic-cdk = "0.16"
ic-stable-structures = "0.6"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3